# lcrt

./: .gitignore  AUTHORS  COPYING  ChangeLog  Doxyfile  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  config.h.in  configure  configure.ac
gnome/: Makefile.am  Makefile.in  lcrt.desktop
help/: Makefile.am  Makefile.in
help/en_US/: lcrt.xml
help/man/: Makefile.am  Makefile.in  lcrt.1.in
help/zh_CN/: lcrt.xml
language/: Makefile.am  Makefile.in  de_DE.c  de_DE.h  en_US.c  en_US.h  language.c  language.h  zh_CN.c  zh_CN.h
pixmaps/: Makefile.am  Makefile.in  lcrt-logo.xpm
src/: Makefile.am  Makefile.in  cabout.c  cabout.h  caccels.c  caccels.h  cconnect.c  cconnect.h  cedit.c  cedit.h  cfile.c  cfile.h  cfind.c  cfind.h  chelp.c  chelp.h  clock.c  clock.h  clogin.c  clogin.h  cmenubar.c  cmenubar.h  cmkdir.c  cmkdir.h  cnotebook.c  cnotebook.h  coptions.c  coptions.h  cpopup.c  cpopup.h  cqconnect.c  cqconnect.h  crename.c  crename.h  csettings.c  csettings.h  cstatus.c  cstatus.h  cstatusbar.c  cstatusbar.h  (+81 more)
